--- a/css/agency.css
+++ b/css/agency.css
@@ -233,12 +233,18 @@ fieldset[disabled] .btn-xl.active {
 }
 
 @media (min-width: 768px) {
-  .navbar-custom {
+  .navbar-custom-index {
     background-color: transparent;
     padding: 25px 0;
     -webkit-transition: padding 0.3s;
     -moz-transition: padding 0.3s;
     transition: padding 0.3s;
+    border: none;
+  }
+    .navbar-custom-gallery {
+    
+    padding: 10px 0;
+   
     border: none;
   }
     
@@ -782,4 +788,33 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #006db1;
+}
+
+
+.container .gallery a img {
+float: left;
+width: 20%;
+height: auto;
+border: 2px solid #fff;
+-webkit-transition: -webkit-transform .15s ease;
+-moz-transition: -moz-transform .15s ease;
+-o-transition: -o-transform .15s ease;
+-ms-transition: -ms-transform .15s ease;
+transition: transform .15s ease;
+position: relative;
+}
+
+.container .gallery a:hover img {
+-webkit-transform: scale(1.05);
+-moz-transform: scale(1.05);
+-o-transform: scale(1.05);
+-ms-transform: scale(1.05);
+transform: scale(1.05);
+z-index: 5;
+}
+
+.clear {
+clear: both;
+float: none;
+width: 100%;
 }
